<resources>
    <string name="app_name">PokéDex</string>
    <string name="empty">Empty</string>

    <!--  App menu  -->
    <string name="filter_types">Set type filter</string>
    <string name="reset_list">Reset list</string>

    <!-- Pokemon Entry -->
    <string name="pokemon_icon_desc">PokemonIconDesc</string>

    <!-- Filter dialog -->
    <string name="filter_title">Filter using type</string>
    <string name="filter_cancel">Cancel</string>
    <string name="filter_reset">Reset</string>

    <!-- Pokemon types names -->
    <string name="type_none">None</string>
    <string name="type_normal">Normal</string>
    <string name="type_fire">Fire</string>
    <string name="type_fighting">Fighting</string>
    <string name="type_water">Water</string>
    <string name="type_flying">Flying</string>
    <string name="type_grass">Grass</string>
    <string name="type_poison">Poison</string>
    <string name="type_electric">Electric</string>
    <string name="type_ground">Ground</string>
    <string name="type_psychic">Psychic</string>
    <string name="type_rock">Rock</string>
    <string name="type_ice">Ice</string>
    <string name="type_bug">Bug</string>
    <string name="type_dragon">Dragon</string>
    <string name="type_ghost">Ghost</string>
    <string name="type_dark">Dark</string>
    <string name="type_steel">Steel</string>
    <string name="type_fairy">Fairy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Details -->
    <string name="detailsTitle">Details</string>
    <string name="description">Description</string>
    <string name="gallery">Gallery</string>
    <string name="locations">Locations</string>
    <string name="height">Height</string>
    <string name="weight_m">%.1f m</string>
    <string name="weight">Weight</string>
    <string name="height_kg">%.1f kg</string>
    <string name="poke_type">Category:</string>
    <string name="leveling_rate">Leveling rate:</string>
    <string name="location_lvl_range">%d - %d</string>
    <string name="location_name">Location name</string>
    <string name="location_lvl">Level</string>

    <!-- LevelingRates -->
    <string name="medium_slow">Medium Slow</string>
    <string name="medium_fast">Medium Fast</string>

    <!-- Routes -->
    <string name="professor_oak">Starter Pokémon from Professor Oak in Pallet Town</string>
    <string name="evolution">Evolution</string>
    <string name="viridian_forest">Viridian Forest</string>
    <string name="pattern_bush">Pattern Bush</string>
    <string name="bond_bridge">Bond Bridge</string>
    <string name="berry_forest">Berry Forest</string>
    <string name="five_isle_meadow">Five Isle Meadow</string>
    <string name="route001">Route 1</string>
    <string name="route002">Route 2</string>
    <string name="route003">Route 3</string>
    <string name="route004">Route 4</string>
    <string name="route005">Route 5</string>
    <string name="route006">Route 6</string>
    <string name="route007">Route 7</string>
    <string name="route008">Route 8</string>
    <string name="route009">Route 9</string>
    <string name="route010">Route 10</string>
    <string name="route011">Route 11</string>
    <string name="route012">Route 12</string>
    <string name="route013">Route 13</string>
    <string name="route014">Route 14</string>
    <string name="route015">Route 15</string>
    <string name="route016">Route 16</string>
    <string name="route017">Route 17</string>
    <string name="route018">Route 18</string>
    <string name="route019">Route 19</string>
    <string name="route020">Route 20</string>
    <string name="route021">Route 21</string>
    <string name="route022">Route 22</string>
    <string name="route023">Route 23</string>
    <string name="route024">Route 24</string>
    <string name="route025">Route 25</string>

    <!-- PokemonCategories -->
    <string name="seed_category">Seed Pokémon</string>
    <string name="lizard_category">Lizard Pokémon</string>
    <string name="flame_category">Flame Pokémon</string>
    <string name="tiny_turtle_category">Tiny Turtle Pokémon</string>
    <string name="turtle_category">Turtle Pokémon</string>
    <string name="shellfish_category">Shellfish Pokémon</string>
    <string name="worm_category">Worm Pokémon</string>
    <string name="cocoon_category">Cocoon Pokémon</string>
    <string name="butterfly_category">Butterfly Pokémon</string>
    <string name="hairy_bug_category">Hairy Bug Pokémon</string>
    <string name="poison_bee_category">Poison Bee Pokémon</string>
    <string name="tiny_bird_category">Tiny Bird Pokémon</string>
    <string name="bird_category">Bird Pokémon</string>

    <!-- PokemonDesc -->
    <string name="desc_001">Bulbasaur can be seen napping in bright sunlight. There is a seed on its back. By soaking up the sun\'s rays, the seed grows progressively larger.</string>
    <string name="desc_002">There is a bud on this Pokémon\'s back. To support its weight, Ivysaur\'s legs and trunk grow thick and strong. If it starts spending more time lying in the sunlight, it\'s a sign that the bud will bloom into a large flower soon.</string>
    <string name="desc_003">There is a large flower on Venusaur\'s back. The flower is said to take on vivid colors if it gets plenty of nutrition and sunlight. The flower\'s aroma soothes the emotions of people.</string>
    <string name="desc_004">The flame that burns at the tip of its tail is an indication of its emotions. The flame wavers when Charmander is enjoying itself. If the Pokémon becomes enraged, the flame burns fiercely.</string>
    <string name="desc_005">Charmeleon mercilessly destroys its foes using its sharp claws. If it encounters a strong foe, it turns aggressive. In this excited state, the flame at the tip of its tail flares with a bluish white color.</string>
    <string name="desc_006">Charizard flies around the sky in search of powerful opponents. It breathes fire of such great heat that it melts anything. However, it never turns its fiery breath on any opponent weaker than itself.</string>
    <string name="desc_007">Squirtle\'s shell is not merely used for protection. The shell\'s rounded shape and the grooves on its surface help minimize resistance in water, enabling this Pokémon to swim at high speeds.</string>
    <string name="desc_008">Its tail is large and covered with a rich, thick fur. The tail becomes increasingly deeper in color as Wartortle ages. The scratches on its shell are evidence of this Pokémon\'s toughness as a battler.</string>
    <string name="desc_009">Blastoise has water spouts that protrude from its shell. The water spouts are very accurate. They can shoot bullets of water with enough accuracy to strike empty cans from a distance of over 160 feet.</string>
    <string name="desc_010">Caterpie has a voracious appetite. It can devour leaves bigger than its body right before your eyes. From its antenna, this Pokémon releases a terrifically strong odor.</string>
    <string name="desc_011">The shell covering this Pokémon\'s body is as hard as an iron slab. Metapod does not move very much. It stays still because it is preparing its soft innards for evolution inside the hard shell.</string>
    <string name="desc_012">Butterfree has a superior ability to search for delicious honey from flowers. It can even search out, extract, and carry honey from flowers that are blooming over six miles from its nest.</string>
    <string name="desc_013">Weedle has an extremely acute sense of smell. It is capable of distinguishing its favorite kinds of leaves from those it dislikes just by sniffing with its big red proboscis (nose).</string>
    <string name="desc_014">Kakuna remains virtually immobile as it clings to a tree. However, on the inside, it is extremely busy as it prepares for its coming evolution. This is evident from how hot the shell becomes to the touch.</string>
    <string name="desc_015">Beedrill is extremely territorial. No one should ever approach its nest - this is for their own safety. If angered, they will attack in a furious swarm.</string>
    <string name="desc_016">Pidgey has an extremely sharp sense of direction. It is capable of unerringly returning home to its nest, however far it may be removed from its familiar surroundings.</string>
    <string name="desc_017">Pidgeotto claims a large area as its own territory. This Pokémon flies around, patrolling its living space. If its territory is violated, it shows no mercy in thoroughly punishing the foe with its sharp claws.</string>
    <string name="desc_018">This Pokémon has a dazzling plumage of beautifully glossy feathers. Many Trainers are captivated by the striking beauty of the feathers on its head, compelling them to choose Pidgeot as their Pokémon.</string>
</resources>